# graphicsproject

./: .gitignore  BUG_FIXES.md  CHANGELOG.md  PRD_SpacePark.md.resolved  README.md  animation.h  camera.h  game_log.txt  input.h  lighting.h  main.cpp  main.py  meshes.py  models.h  scene.h  test_render.py  textures.h
AmusementPark3D/: CMakeLists.txt  README.md  build.bat  do_build.bat  presentation_guide.md  setup.bat
AmusementPark3D/src/: main.cpp
AmusementPark3D/src/audio/: AudioManager.cpp  AudioManager.h
AmusementPark3D/src/camera/: Camera.cpp  Camera.h
AmusementPark3D/src/core/: Common.h  Engine.cpp  Engine.h  Timer.cpp  Timer.h  Window.cpp  Window.h
AmusementPark3D/src/input/: InputManager.cpp  InputManager.h
AmusementPark3D/src/minigames/: Minigames.cpp  Minigames.h
AmusementPark3D/src/physics/: PhysicsWorld.cpp  PhysicsWorld.h
AmusementPark3D/src/renderer/: Mesh.cpp  Mesh.h  ParticleSystem.cpp  ParticleSystem.h  ProceduralMeshes.cpp  ProceduralMeshes.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
AmusementPark3D/src/rides/: Rides.cpp  Rides.h
AmusementPark3D/src/ui/: UISystem.cpp  UISystem.h
AmusementPark3D/src/world/: ParkWorld.cpp  ParkWorld.h
minigames/: __init__.py  asteroid_shooting.py  rocket_race.py  space_maze.py  whack_a_mole.py
player/: player.py
scenes/: main_menu.py  pause_menu.py
systems/: day_night.py  npc_manager.py  particle_system.py  score_manager.py
zones/: __init__.py  cosmic_rides.py  entry_plaza.py  galaxy_games.py
